add others routes

--- a/api-reference/procedures/update.mdx
+++ b/api-reference/procedures/update.mdx
@@ -1,3 +1,4 @@
 ---
+ title: 'Update Procedure' openapi: 'put /procedures/{id}'
 
-## title: 'Update Procedure' openapi: 'put /procedures/{id}'
+---
